# iearth_downloader

./: .gitignore  README.Chinese.md  README.md  example_usage_cli.py  exp.py  main.py  pyproject.toml  requirements.txt
core/: catalog_manager.py  download_processor.py  downloader.py  file_manager.py
src/iearth_downloader/: iearth_downloader.py  main.py
src/iearth_downloader/config/: config.py
src/iearth_downloader/core/: catalog_manager.py  download_processor.py  downloader.py  file_manager.py
src/iearth_downloader/system/: const.py  system.ini
src/iearth_downloader/utils/: auth.py
system/: system.ini
utils/: auth.py  encrypt_utils.py
